--- a/public/screen.css
+++ b/public/screen.css
@@ -47,3 +47,30 @@ h1 {
   text-align: center;
   font-size: 5rem;
 }
+
+div {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+
+.half {
+  display: flex;
+}
+
+.first-div {
+  margin-right: 1rem;
+}
+
+.second-div {
+  margin-left: 1rem;
+}
+
+.first {
+  padding: 0.5rem;
+}
+
+.second {
+  padding: 0.5rem;
+}
