--- a/public/screen.css
+++ b/public/screen.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: rgb(14, 14, 14);
+  color: RGB(237, 187, 0);
   background-image: url(./images/camp-nou.jpg);
   background-repeat: no-repeat;
   background-size: cover;
